ensure sidebars are properly collapsed

for no session data or KWrite mode we need to do some proper init
allows to remove other hack for KWrite

BUG: 460160